# setcoveringsolver

./: .bazelrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: build.yml
data/: BUILD  data.csv  data_pace2025_ds_heuristic.csv  data_pace2025_ds_heuristic_private.csv  data_pace2025_heuristic.csv  data_pace2025_heuristic_private.csv
include/setcoveringsolver/: algorithm.hpp  algorithm_formatter.hpp  instance.hpp  instance_builder.hpp  reduction.hpp  solution.hpp
include/setcoveringsolver/algorithms/: clique_cover_bound.hpp  cp_sat_ortools.hpp  greedy.hpp  large_neighborhood_search.hpp  local_search_row_weighting.hpp  milp.hpp  milp_cbc.hpp  milp_gurobi.hpp  milp_ortools.hpp  trivial_bound.hpp
scripts/: download_data.py  process_benchmarks.py  run_benchmarks.py  run_tests.py
setcoveringsolver/: BUILD  algorithm_formatter.cpp  bench.py  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  main.cpp  reduction.cpp  solution.cpp  solution.hpp  variables.bzl
setcoveringsolver/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  branchandcut.cpp  branchandcut.hpp  branchandcut_gurobi.cpp  branchandcut_gurobi.hpp  greedy.cpp  greedy.hpp  large_neighborhood_search.cpp  large_neighborhood_search.hpp  largeneighborhoodsearch.cpp  largeneighborhoodsearch.hpp  local_search_row_weighting.cpp  local_search_row_weighting.hpp  localsearch.cpp  localsearch.hpp  localsearch_rowweighting.cpp  localsearch_rowweighting.hpp  milp_cbc.cpp  milp_cbc.hpp  milp_gurobi.cpp  milp_gurobi.hpp
setcoveringsolver/setcovering/: BUILD  algorithm.hpp  algorithm_formatter.cpp  algorithm_formatter.hpp  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  main.cpp  reduction.cpp  reduction.hpp  solution.cpp  solution.hpp
setcoveringsolver/setcovering/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  greedy.cpp  greedy.hpp  large_neighborhood_search.cpp  large_neighborhood_search.hpp  local_search_row_weighting.cpp  local_search_row_weighting.hpp  milp_cbc.cpp  milp_cbc.hpp  milp_gurobi.cpp  milp_gurobi.hpp
solutions/gecco2020_AC/: AC_01_solution.txt  AC_02_solution.txt  AC_03_solution.txt  AC_04_solution.txt  AC_05_solution.txt  AC_06_solution.txt  AC_07_solution.txt  AC_08_solution.txt  AC_09_solution.txt  AC_10_solution.txt  AC_11_solution.txt  AC_12_solution.txt  AC_13_solution.txt  AC_14_solution.txt  AC_15_solution.txt  AC_16_solution.txt  AC_17_solution.txt  AC_18_solution.txt
solutions/gecco2020_RW/: RW_01_solution.txt  RW_02_solution.txt  RW_03_solution.txt  RW_04_solution.txt  RW_05_solution.txt  RW_06_solution.txt  RW_07_solution.txt  RW_08_solution.txt  RW_09_solution.txt  RW_10_solution.txt  RW_11_solution.txt  RW_12_solution.txt  RW_13_solution.txt  RW_14_solution.txt  RW_15_solution.txt  RW_16_solution.txt  RW_17_solution.txt  RW_18_solution.txt  RW_19_solution.txt  RW_20_solution.txt  RW_21_solution.txt  RW_22_solution.txt  RW_23_solution.txt  RW_24_solution.txt  RW_25_solution.txt  RW_26_solution.txt  RW_27_solution.txt  RW_28_solution.txt  RW_29_solution.txt  RW_30_solution.txt  RW_31_solution.txt  RW_32_solution.txt  RW_33_solution.txt  RW_34_solution.txt  RW_35_solution.txt  RW_36_solution.txt  RW_37_solution.txt
src/: CMakeLists.txt  algorithm_formatter.cpp  instance.cpp  instance_builder.cpp  main.cpp  reduction.cpp  solution.cpp
src/algorithms/: CMakeLists.txt  clique_cover_bound.cpp  cp_sat_ortools.cpp  greedy.cpp  large_neighborhood_search.cpp  local_search_row_weighting.cpp  milp.cpp  milp_cbc.cpp  milp_gurobi.cpp  milp_ortools.cpp  trivial_bound.cpp
